--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/jyp90/graphql-apollo-template#readme",
   "dependencies": {
-    "convert-csv-to-json": "^1.3.0"
+    "apollo-server": "^2.25.1",
+    "convert-csv-to-json": "^1.3.0",
+    "graphql": "^15.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
